--- a/base/route.yaml
+++ b/base/route.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: Service
+apiVersion: route.openshift.io/v1
+kind: Route
 metadata:
   name: quarkus-example
   namespace: quarkus-app
@@ -15,17 +15,16 @@ metadata:
     app.openshift.io/vcs-ref: ''
     app.openshift.io/vcs-uri: 'https://github.com/TiagoAvelino/Quarkus-Example'
     openshift.io/generated-by: OpenShiftWebConsole
+    openshift.io/host.generated: 'true'
 spec:
-  type: ClusterIP
-  ports:
-    - name: 8080-tcp
-      protocol: TCP
-      port: 8080
-      targetPort: 8080
-    - name: 8443-tcp
-      protocol: TCP
-      port: 8443
-      targetPort: 8443
-  selector:
-    app: quarkus-example
-    deployment: quarkus-example
+  host: quarkus-example-quarkus-app.apps.cluster-qj7w2.qj7w2.sandbox429.opentlc.com
+  to:
+    kind: Service
+    name: quarkus-example
+    weight: 100
+  port:
+    targetPort: 8080-tcp
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
+  wildcardPolicy: None
