--- a/CI/Secrets/secret-application.yaml
+++ b/CI/Secrets/secret-application.yaml
@@ -6,6 +6,6 @@ metadata:
   annotations:
     tekton.dev/git-0: 'https://github.com/TiagoAvelino/Quarkus-Example'
 data:
-  password: 
+  password: Z2hwX2lIa0tRQjROYmNpWnRmQzU0NDdjNkpYNlA0MVMydzJaOEVzbA==
   username: VGlhZ29BdmVsaW5v
 type: kubernetes.io/basic-auth
