--- a/overlays/dev/deployment.yaml
+++ b/overlays/dev/deployment.yaml
@@ -31,4 +31,4 @@ spec:
     spec:
       containers:
       - name: quarkus-example
-        image: quay.io/rh_ee_tavelino/ci-quarkus:@sha256:1ff6c18fbef2045af6b9c16bf034cc421a29027b800e4f9b68ae9b1cb3e9ae07
+        image: quay.io/rh_ee_tavelino/ci-quarkus@sha256:1ff6c18fbef2045af6b9c16bf034cc421a29027b800e4f9b68ae9b1cb3e9ae07
