--- a/overlays/dev/deployment.yaml
+++ b/overlays/dev/deployment.yaml
@@ -31,4 +31,4 @@ spec:
     spec:
       containers:
       - name: quarkus-example
-        quay.io/rh_ee_tavelino/ci-quarkus@sha256:294af3b0430d91ef7ea8b901a232919efa0617dd4473a383a0978369e9871462
+        image: quay.io/rh_ee_tavelino/ci-quarkus@sha256:294af3b0430d91ef7ea8b901a232919efa0617dd4473a383a0978369e9871462
