--- a/CI/Tasks/commit-task.yaml
+++ b/CI/Tasks/commit-task.yaml
@@ -66,7 +66,7 @@ spec:
           echo "**** Updating $(params.gitPath) image tag to $(params.imageTag)"
         fi
         # Update the image tag in the specified file; adjust the regex if needed
-        sed -i 's|image:.*|$(params.imageName)@\$(params.imageTag)|' $(params.gitPath)
+        sed -i 's|image:.*|image: $(params.imageName)@\$(params.imageTag)|' $(params.gitPath)
         cat $(params.gitPath)
     - name: commit-push-changes
       image: alpine/git:v2.26.2
