--- a/base/quay-secret.yaml
+++ b/base/quay-secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
   name: my-quay-secret
   namespace: quarkus-app
 data:
