--- a/base/route.yaml
+++ b/base/route.yaml
@@ -16,6 +16,7 @@ metadata:
     app.openshift.io/vcs-uri: 'https://github.com/TiagoAvelino/Quarkus-Example'
     openshift.io/generated-by: OpenShiftWebConsole
     openshift.io/host.generated: 'true'
+    argocd.argoproj.io/sync-wave: "30"
 spec:
   host: quarkus-example-quarkus-app.apps.tiago-cluster.sandbox1900.opentlc.com
   to:
