--- a/base/service.yaml
+++ b/base/service.yaml
@@ -15,6 +15,8 @@ metadata:
     app.openshift.io/vcs-ref: ''
     app.openshift.io/vcs-uri: 'https://github.com/TiagoAvelino/Quarkus-Example'
     openshift.io/generated-by: OpenShiftWebConsole
+    argocd.argoproj.io/sync-wave: "30"
+
 spec:
   type: ClusterIP
   ports:
