--- a/CI/service-account.yaml
+++ b/CI/service-account.yaml
@@ -5,3 +5,7 @@ metadata:
   namespace: openshift-pipelines
 secrets:
   - name: git-credentials
+  - name: pipeline-dockercfg-l556s
+  - name: my-quay-secret
+imagePullSecrets:
+  - name: pipeline-dockercfg-l556s
