--- a/CI/Trigger/event-listener.yaml
+++ b/CI/Trigger/event-listener.yaml
@@ -18,3 +18,5 @@ spec:
             value:
               secretName: github-interceptor-secret
               secretKey: secretToken  
+          - name: "eventTypes"
+            value: ["push"]
