--- a/CI/Trigger/trigger-binding.yaml
+++ b/CI/Trigger/trigger-binding.yaml
@@ -4,7 +4,11 @@ metadata:
  name: ci-quarkus-pipeline-binding
 spec:
  params:
- - name: gitrevision
-   value: $(body.pull_request.head.sha)
- - name: gitrepositoryurl
+ - name: APP_NAME
+   value: $(body.repository.name)
+ - name: REPO_FULL_NAME
+   value: $(body.repository.name)
+ - name: GIT_REVISION
+   value: $(body.ref)
+ - name: GIT_REPO
    value: $(body.repository.html_url)
