--- a/CI/Secrets/secret-application.yaml
+++ b/CI/Secrets/secret-application.yaml
@@ -8,4 +8,5 @@ metadata:
 data:
   password: Z2hwX2lIa0tRQjROYmNpWnRmQzU0NDdjNkpYNlA0MVMydzJaOEVzbA==
   username: VGlhZ29BdmVsaW5v
+  email: dGlhZ28uYXZlbGlubzE5OTdAZ21haWwuY29t
 type: kubernetes.io/basic-auth
