--- a/CI/Tasks/lower-case.yaml
+++ b/CI/Tasks/lower-case.yaml
@@ -13,8 +13,10 @@ spec:
       description: The lower-case version of APP_NAME.
   steps:
     - name: convert
-      image: busybox
+      image: registry.access.redhat.com/ubi8/ubi-minimal
       script: |
         #!/bin/sh
         LOWER_APP_NAME=$(echo "$(params.APP_NAME)" | tr '[:upper:]' '[:lower:]')
         echo -n "${LOWER_APP_NAME}" > $(results.lowerAppName.path)
+      securityContext:
+        runAsUser: 1001
