--- a/overlays/dev/deployment.yaml
+++ b/overlays/dev/deployment.yaml
@@ -15,4 +15,4 @@ spec:
     spec:
       containers:
       - name: quarkus-example
-        image: quay.io/rh_ee_tavelino/quarkusapp:latest
+        image: quay.io/rh_ee_tavelino/ci-quarkus
