--- a/CI/Secrets/secret-application.yaml
+++ b/CI/Secrets/secret-application.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: git-credentials
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
   annotations:
     tekton.dev/git-0: 'https://github.com/TiagoAvelino/Quarkus-Example'
 data:
