--- a/CI/PVCs/pvc-node.yaml
+++ b/CI/PVCs/pvc-node.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: maven-settings-pvc
-  namespace: prodepa-pipelines
+  name: source-node-pvc
 spec:
   accessModes:
     - ReadWriteOnce
