--- a/CI/PVCs/pvc-workspace.yaml
+++ b/CI/PVCs/pvc-workspace.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: workspace-pvc
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
 spec:
   accessModes:
     - ReadWriteOnce
