--- a/CI/SA/roles.yaml
+++ b/CI/SA/roles.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: pipeline
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
 secrets:
   - name: my-quay-secret
   - name: git-credentials
@@ -13,7 +13,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pipelines-as-code-cleanup-job
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
 rules:
   - apiGroups: ["tekton.dev"]
     resources: ["taskruns"]
@@ -23,7 +23,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: pipelines-as-code-cleanup-job
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
 subjects:
   - kind: ServiceAccount
     name: pipeline
@@ -53,7 +53,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: pipeline
-    namespace: openshift-pipelines
+    namespace: prodepa-pipelines
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
