--- a/CI/Secrets/secre-plataform.yaml
+++ b/CI/Secrets/secre-plataform.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: git-credentials-applications
-  namespace: openshift-pipelines
+  namespace: prodepa-pipelines
   annotations:
     tekton.dev/git-1: 'https://github.com/TiagoAvelino/Manifests'
 data:
